# logoscope

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EXAMPLES.md  README.md  USAGE_EXAMPLES.md  demo_mode_comparison.sh  demo_performance_issue.sh  demo_production_incident.sh  demo_realtime_monitoring.sh  package.json  spec.md  test_anomalies.json  test_anomalies2.json  test_burst.json  test_comprehensive.sh  test_logs.json  test_outliers.json  worker.js  wrangler.toml
logoscope/: Cargo.toml  PERFORMANCE_OPTIMIZATION.md  test_canon
logoscope/src/: ai.rs  analyzers.rs  anomaly.rs  correlation.rs  drain_adapter.rs  field_anomaly.rs  lib.rs  masking.rs  multiline.rs  param_extractor.rs  parser.rs  patterns.rs  query.rs  schema.rs  smart_masking.rs  temporal.rs  timestamp_tests.rs
logoscope/tests/: ai_anomalies_output_tests.rs  ai_correlation_integration_tests.rs  ai_enriched_tests.rs  ai_suggestions_tests.rs  ai_summary_tests.rs  anomaly_tests.rs  canonicalization_test.rs  chunked_consistency_tests.rs  correlation_tests.rs  debug_percentage_test.rs  debug_unit_test.rs  direct_disambiguation_test.rs  drain_adapter_tests.rs  end_to_end_disambiguation_test.rs  enhanced_timestamp_test.rs  error_recovery_tests.rs  field_anomaly_tests.rs  masking_tests.rs  multifile_tests.rs  multiline_tests.rs  param_disambiguation_tests.rs  param_extractor_tests.rs  parser_tests.rs  pattern_confidence_tests.rs  patterns_tests.rs  query_service_host_tests.rs  query_tests.rs  requirement_validation_test.rs  schema_tests.rs  sequence_detection_tests.rs  source_attribution_tests.rs  (+2 more)
(+18 files in other folders)
