[package]
name = "logoscope"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
chrono = { version = "0.4", features = ["clock", "std", "serde"] }
once_cell = "1.19"
thiserror = "1.0"
itertools = "0.13"
drain-rs = "0.3"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
ctrlc = "3"
